--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "webchannel-wrapper",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A library for use webchannels outside of the closure compiler",
   "author": "Omkar Yadav <httpsOmkar@gmail.com>",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "files": [
-    "dist"
+    "dist",
+    "src/index.d.ts"
   ],
+  "types": "src/index.d.ts",
   "scripts": {
     "dev": "watch 'yarn build' src",
     "build": "node tools/build.js",
